teooi commit 20250311